# evolve_nn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
cpp_scripts/: example_script.cpp
include/foundation/: utils.hpp
include/foundation/graph/: compiled_graph.hpp  nodes.hpp
include/foundation/train/: regression_single_pass.hpp
notebooks/: brain_nn.py  brain_nn_cartpole.py  brain_nn_test.py  computational_graph.py  cpp_evolve_loss.py  cpp_test.py  evolve.py  no_vec.py  refactor_test.py  response_test.py  train_graph.py
scripts/: cpp_test.py  example.py
src/project/: foundation.pyi  type_defs.py
src/project/brain_nn/: type_defs.py
src/project/brain_nn/brain/: __init__.py
src/project/brain_nn/evolution/: __init__,py  mutations.py  select_and_mutate.py
src/project/compute_graph/: foundation.pyi
src/project/compute_graph/evolution/: individual.py  initialize.py  select_and_mutate.py
src/project/compute_graph/foundation/: CMakeLists.txt  python.cpp
src/project/compute_graph/graph/: compiled.py  graph.py  nodes.py
src/project/compute_graph/variation_ops/: __init__.py  graph_mutation.py
src/project/evolution/: individual.py  initialize.py  select_and_mutate.py
src/project/foundation/: CMakeLists.txt  __init__.pyi  graph.pyi  python.cpp  train.pyi  utils.cpp
src/project/foundation/graph/: compiled_graph.cpp  nodes.cpp
src/project/foundation/graph_novec/: nodes.cpp
src/project/graph/: compiled.py  graph.py  nodes.py
src/project/graph_novec/: compiled.py  evolution.py  graph.py  graph_mutation.py  individual.py  individual_mutation.py  mutation.py  nodes.py
src/project/tasks/one_d_regression/: __init__.py
src/project/utils/: graph_utils.py  paths.py  rand_utils.py  sequence.py
src/project/variation_ops/: __init__.py  graph_mutation.py  graph_recombination.py
tests/foundation/: test_example.py
tests/utils/: test_example_util.py
tools/: build.py
